--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
         body {
             margin: 0;
             overflow: hidden;
+            font-family: monospace;
         }
 
         canvas {
@@ -14,11 +15,52 @@
             width: 100%;
             height: 100%;
         }
+
+        #loader {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.758);
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            z-index: 999;
+        }
+
+        #loader p {
+            animation: loadingAnimation 1s linear infinite;
+        }
+
+        @keyframes loadingAnimation {
+
+            0%,
+            100% {
+                transform: translateX(-50%);
+                color: magenta;
+            }
+
+            50% {
+                transform: translateX(50%);
+                color: cyan;
+            }
+        }
     </style>
 </head>
 
 <body>
     <canvas id="canvas"></canvas>
+    <div id="loader">
+        <p>Loading</p>
+    </div>
+    <script>
+        window.onSceneReady = () => {
+            document.querySelector('#loader').style.display = "none"
+        }
+    </script>
     <script src="main.js"></script>
 </body>
 
